Fix header button vertical alignment

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -54,8 +54,8 @@
       background: transparent;
       border: 0;
       cursor: pointer;
+      display: flex;
       padding: 0;
-      width: 36px;
     }
   }
 
